# Philadelphia-Crime-Incidents-Analysis

./: .dockerignore  .env.example  .env.runtime.high-performance  .env.runtime.low-power  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_NOTES.md  Makefile  NOTEBOOK_MIGRATION_SUMMARY.md  PHASE_2_VALIDATION_SUMMARY.md  README.md  SUMMARY.md  cloudbuild.yaml  config.ini  coverage.json  docker-compose.yml  environment.yml  final_offense_analysis.py  firebase.json  firestore.indexes.json  firestore.rules  pre-commit-config.yaml  project_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_phase1.sh  spec-file.txt  temp_test.py  test_notebook_execution_fixed.py  test_phase2_validation.py
.planning/: 02-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STATE.md.backup  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
analysis/: 03-01-holiday_effects.py  03-02-crime_type_profiles.py  03-03-shift_analysis.py  03-04-advanced_temporal_report.py  06_generate_report.py  07_report_safety_trend.py  07_safety_trend_report.py  08_report_summer_spike.py  09_report_red_zones.py  10_report_covid_lockdown.py  11_report_robbery_timing.py  12_report_correlations.py  __init__.py  artifact_manager.py  categorical_analysis.py  config.py  config_loader.py  correlation_analysis.py  covid_lockdown.py  cross_analysis.py  data_quality.py  event_utils.py  external_data.py  orchestrate_phase1.py  orchestrate_phase2.py  phase2_config_loader.py  phase3_config_loader.py  red_zones.py  report_utils.py  reproducibility.py  robbery_timing.py  safety_trend.py  safety_trend_analysis.py  spatial_analysis.py  spatial_utils.py  stats_utils.py  summer_spike.py  summer_spike_analysis.py  temporal_analysis.py  utils.py  (+3 more)
api/: Dockerfile  __init__.py  main.py  requirements.txt
code_reviews/: code_review.md
config/: chief.yaml  forecasting.yaml  global.yaml  patrol.yaml  phase1_config.yaml  phase2_config.yaml  phase3_config.yaml  policy.yaml  report_template.md.j2
crime_incidents_philadelphia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: __init__.py  app.py  config.py
data/: csv_to_parquet.py  scrape.py
docs/: DELIVERY_SUMMARY.md  FORECASTING_SUMMARY.md  MIGRATION.md  NOTEBOOK_COMPLETION_REPORT.md  NOTEBOOK_QUICK_REFERENCE.md  V1.1_RELEASE_NOTES.md  local-compose.md  project_detailes.md  resource-detection.md
infra/: report.py  validate.py  visualize.py
notebooks/: 00_environment_setup.ipynb  00_start_here.ipynb  01_data_loading_validation.ipynb  02_exploratory_analysis.ipynb  03_temporal_analysis.ipynb  04_classification_violence.ipynb  04_forecasting_crime_ts.ipynb  04_geographic_analysis.ipynb  04_hypothesis_heat_crime.ipynb  05_offense_breakdown.ipynb  05_offense_breakdown.nbconvert.ipynb  06_disparity_analysis.ipynb  06_disparity_analysis_output.ipynb  07_cross_factor_analysis.ipynb  README.md  census_tract_rates.ipynb  covid_lockdown_crime_landscape.ipynb  crime_composition.executed.ipynb  data_quality_audit_notebook.ipynb  district_severity.executed.ipynb  district_severity.ipynb  executed_forecasting.ipynb  phase2_summary.ipynb  philadelphia_safety_trend_analysis.ipynb  retail_theft_trend.executed.ipynb  retail_theft_trend.ipynb  robbery_temporal_heatmap.ipynb  summer_crime_spike_analysis.ipynb  vehicle_crimes_corridors.ipynb
output/: annual_trends.json  classification_features.json  covid_comparison.json  forecast.json  metadata.json  monthly_trends.json  seasonality.json  spatial_summary.json
pipeline/: Dockerfile  __init__.py  compose_entrypoint.sh  export_data.py  refresh_data.py
reports/: 01_data_quality_audit.md  01_data_quality_audit_notebook_report.md  02_safety_trend_report.md  03_summer_spike_report.md  04_classification_model_card.json  04_covid_lockdown_report.md  04_heat_crime_statistical_tests.json  05_red_zones_report.md  06_robbery_timing_report.md  12_report_correlations.md  14_crime_type_profiles_report.md  15_shift_analysis_report.md  16_advanced_temporal_analysis_report.md  annual_trend_executed_v1.0.ipynb  annual_trend_manifest_v1.0.json  annual_trend_report_v1.0.md  classification_model_performance.csv  covid_executed_v1.0.ipynb  covid_manifest_v1.0.json  covid_report_v1.0.md  crime_composition_analysis.md  crime_composition_annual.csv  district_severity_ranking.csv  district_severity_ranking.md  districts_scored.geojson  eda_report.md  event_impact_results.csv  event_impact_summary.md  final_weighted_severity_summary.md  flagged_tracts_report.md  forecast_model_performance.csv  heat_crime_analysis_results.csv  heat_crime_correlations.csv  heat_crime_hot_vs_cold.csv  heat_crime_hypothesis_summary.md  hotspot_centroids.geojson  hotspot_cluster_summary.csv  hotspot_heatmap.html  phase1_manifest_v1.0.json  phase2_manifest.json  (+16 more)
scripts/: api_endpoints.md  benchmark_container_builds.sh  clean_notebook_markdown.py  compose_with_runtime_mode.sh  config.py  convert_final_prints_to_markdown.py  convert_text_tables_to_markdown.py  create_event_calendar.py  data_integrity_validators.py  data_loader.py  download_boundaries.py  download_corridors.py  normalize_heat_crime_exports.py  performance_thresholds.py  performance_utils.py  preset_calculator.py  reset_local_stack.sh  resource_detector.py  test_phase1_uat.py  validate_compose_profiles.sh  validate_compose_runtime_budget.sh  validate_compose_runtime_mode.sh  validate_local_stack.py  validate_phase2.py  validate_runtime_guardrails.sh  validation_models.py
tests/: TESTING_QUALITY_CRITERIA.md  conftest.py  test_api_endpoints.py  test_api_services.py  test_classification.py  test_cli_chief.py  test_cli_forecasting.py  test_cli_main.py  test_cli_patrol.py  test_cli_policy.py  test_config_schemas.py  test_config_settings.py  test_data_cache.py  test_data_loading.py  test_data_preprocessing.py  test_data_validation.py  test_integration_output_verification.py  test_models_classification.py  test_models_time_series.py  test_models_validation.py  test_phase2_spatial.py  test_pipeline_export.py  (+7 more)
(+875 files in other folders)
