[project]
name = "crime-incidents-philadelphia"
version = "1.1.0"
description = "Crime incidents analysis for Philadelphia"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "pyarrow>=21.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "prophet.*",
    "shap.*",
    "lightgbm.*",
    "pingouin.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["analysis", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "B905",  # zip without strict parameter (optional, not a bug)
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG"]       # Allow unused arguments in tests
"analysis/utils/__init__.py" = ["ARG"]  # Stub functions need *args/**kwargs for API compatibility
"analysis/data/preprocessing.py" = ["ARG"]  # date_col parameter for future extensibility

[tool.ruff.lint.isort]
known-first-party = ["analysis"]
