[project]
name = "crime-incidents-philadelphia"
version = "1.1.0"
description = "Crime incidents analysis for Philadelphia"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "pyarrow>=21.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
include = ["analysis*", "api*", "pipeline*"]
exclude = ["web*", "data*", "config*", "reports*", "notebooks*", "Incidents*", "Philadelphia*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-xdist>=3.0",
    "diff-cover>=9.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-nauto",                      # Auto-detect CPU count for local dev
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=analysis",
    "--cov=api",
    "--cov=pipeline",
    "--cov-report=xml",            # Required for diff-cover
    "--cov-report=term-missing",   # Show missing lines in terminal
    "--cov-report=html",           # Generate HTML report for review
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["analysis", "api", "pipeline"]
branch = true                    # Enable branch coverage (more accurate than line coverage)
parallel = true                   # Required for pytest-xdist
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/__main__.py",          # CLI entry point
]

[tool.coverage.report]
fail_under = 0.0                 # Disabled for Phase 11 (only testing core modules)
precision = 2                    # Report 2 decimal places
show_missing = true              # Show missing line numbers
skip_covered = false             # Show all files, even 100% covered
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
exclude = '''
(?x)(
    ^analysis/
  | ^reports/
  | ^scripts/
  | ^web/
  | ^tests/(?!test_api_endpoints\.py$|test_pipeline_export\.py$).*
)
'''
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "prophet.*",
    "shap.*",
    "lightgbm.*",
    "pingouin.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["geopandas", "shapely", "joblib"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["analysis.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "starlette",
    "starlette.*",
    "firebase_admin",
    "firebase_admin.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  | notebooks
  | reports
  | web/\.next
  | web/node_modules
  | web/out
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["analysis", "tests"]
extend-exclude = ["reports", "web/.next", "web/node_modules", "web/out"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "B905",  # zip without strict parameter (optional, not a bug)
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG"]       # Allow unused arguments in tests
"analysis/utils/__init__.py" = ["ARG"]  # Stub functions need *args/**kwargs for API compatibility
"analysis/data/preprocessing.py" = ["ARG"]  # date_col parameter for future extensibility
"analysis/__init__.py" = ["ARG"]  # Stub function _missing_geopandas needs *args/**kwargs
"analysis/orchestrate_phase1.py" = ["E402"]  # Module level imports after sys.path manipulation
"analysis/orchestrate_phase2.py" = ["E402"]  # Module level imports after sys.path manipulation
"analysis/visualization/forecast_plots.py" = ["SIM108"]  # Ternary operator would reduce readability

[tool.ruff.lint.isort]
known-first-party = ["analysis", "api", "pipeline"]
